<resources>
    <string name="app_name">Photos</string>
    <string name="album_name">album name</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string-array name="album_array">
        <item>Photo Album</item>
        <item>New Album</item>
    </string-array>
    <string name="title_activity_add_button">Add Album Menu</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_edit_alb_button">Rename Album Menu</string>
    <string name="album_hint">Enter album name</string>
    <string name="renbutton">Rename</string>
    <string name="old_alb_hint">album name</string>
    <string name="new_alb_hint">new album name</string>
    <string name="title_activity_photo_gallery">PhotoGallery</string>
    <string name="display">Display</string>
    <string name="move">Move</string>
    <string name="title_activity_display_photo">DisplayPhoto</string>
    <string name="taghint">Tags will be shown here</string>
    <string name="title_activity_tag_menu">TagMenu</string>
    <string name="destination_album">Destination Album</string>
    <string name="search">Search</string>
    <string name="title_activity_search_menu">SearchMenu</string>
    <string name="title_activity_search_result">SearchResult</string>
    <string name="title_activity_move_photo">MovePhoto</string>

</resources>