<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:text="@string/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/album_editText" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="72dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/album_editText" />

    <EditText
        android:id="@+id/album_editText"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/album_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:drawable/editbox_background"/>
</androidx.constraintlayout.widget.ConstraintLayout>