<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/tagmenuTextView"
        android:layout_width="261dp"
        android:layout_height="121dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="87dp"
        android:text="@string/taghint"
        android:textIsSelectable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/persontagEditText"
        android:layout_width="123dp"
        android:layout_height="41dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="person tag"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/locationtagEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagmenuTextView" />

    <EditText
        android:id="@+id/locationtagEditText"
        android:layout_width="126dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="38dp"
        android:ems="10"
        android:hint="location tag"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/persontagEditText"
        app:layout_constraintTop_toBottomOf="@+id/tagmenuTextView" />

    <Button
        android:id="@+id/addTagButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="16dp"
        android:text="@string/add"
        app:layout_constraintEnd_toStartOf="@+id/deleteTagButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/persontagEditText" />

    <Button
        android:id="@+id/deleteTagButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="75dp"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addTagButton"
        app:layout_constraintTop_toBottomOf="@+id/locationtagEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>